feat(rental-domain): implement rental flow with secure configuration and no secrets